--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,9 @@
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
-        "storage"
+        "storage","activeTab", "clipboardWrite"
     ],
+     "host_permissions": ["<all_urls>"],
     "background": {
         "service_worker": "src/background.js"
     },
